# meta-memcache-socket-py

./: .gitignore  Cargo.toml  README.md  meta_memcache_socket.pyi  pyproject.toml
.github/workflows/: CI.yml  tests.yml
src/: constants.rs  encode_key.rs  impl_build_cmd.rs  impl_build_cmd_tests.rs  impl_parse_header.rs  impl_parse_header_tests.rs  lib.rs  memcache_socket.rs  request_flags.rs  request_flags_tests.rs  response_flags.rs  response_flags_tests.rs  response_types.rs
tests/: test_memcache_socket.py  test_response_types.py
