[package]
name = "meta-memcache-socket"
version = "0.2.0"
edition = "2024"

[lib]
name = "meta_memcache_socket"
crate-type = ["cdylib"]

[dependencies]
atoi = "2.0.0"
base64 = "0.22.1"
blake2 = "0.10"
itoa = "1"
libc = "0.2"
memchr = "2"
pyo3 = { version = "0.28", features = ["extension-module"] }
log = "0.4"
pyo3-log = "0.13"
